--- a/weatherDashboardCSS.css
+++ b/weatherDashboardCSS.css
@@ -23,6 +23,33 @@
     color: white;
 }
 
+.card-body {
+  position: relative;
+  bottom: 50px;
+}
+
+.form-group {
+  text-align: center;
+}
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+  #five-Day-Forecast .card {
+    width: 15% !important;
+    font-size: 80%;
+    height: 14rem !important
+  }
+  .card-text {
+    position: relative;
+    top: 20px;
+  }
+  #date1, #date2, #date3, #date4, #date5 {
+    font-size: 150%;
+  }
+  body {
+    height: 10%;
+  }
+}
+
 
 
 
