--- a/weatherDashboardCSS.css
+++ b/weatherDashboardCSS.css
@@ -2,6 +2,11 @@
     width: 500px;
 }
 
+#uv-index {
+  max-width: 84%;
+  padding: 2px; 
+}
+
 #date1, #date2, #date3, #date4, #date5 {
     text-align: center;
 }
