--- a/weatherDashboardCSS.css
+++ b/weatherDashboardCSS.css
@@ -1,5 +1,6 @@
 #citySearch {
-    width: 500px;
+    min-width: 500px;
+
 }
 
 #uv-index {
@@ -17,8 +18,10 @@
 }
 
 #searchBar {
-    margin-left: 220px;
+    margin-left: 150px;
     box-shadow: 2px 2px gray;
+    height: auto;
+    width: 100px;
 }
 
 #currentConditions {
@@ -48,7 +51,25 @@ body {
   color: gray;
 }
 
-@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+#card1, #card2, #card3, #card4, #card5 {
+  position: relative;
+  right: 40px;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;} 
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (min-device-width: 1081px) and (max-device-width: 1524px) and (orientation:landscape) {
   #five-Day-Forecast .card {
     width: 15% !important;
     font-size: 80%;
